--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2043,5 +2043,22 @@
         <item>2</item>
         <item>3</item>
     </string-array>
+    
+    <string-array name="entries_dpi_system_window">
+        <item>120 dpi</item>
+        <item>140 dpi</item>
+        <item>160 dpi</item>
+        <item>180 dpi</item>
+        <item>213 dpi</item>
+        <item>240 dpi</item>
+    </string-array>
 
+    <string-array name="values_dpi_system_window" translatable="false">
+        <item>120 dpi</item>
+        <item>140 dpi</item>
+        <item>160 dpi</item>
+        <item>180 dpi</item>
+        <item>213 dpi</item>
+        <item>240 dpi</item>
+    </string-array>
 </resources>
