--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2061,4 +2061,18 @@
         <item>213 dpi</item>
         <item>240 dpi</item>
     </string-array>
+    
+    <string-array name="uimode_entries">
+        <item>None</item>
+        <item>PhoneUI</item>
+        <item>PhabletUI</item>
+        <item>TabletUI</item>
+    </string-array>
+    
+    <string-array name="uimode_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
 </resources>
