--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -25,4 +25,8 @@
 
     </PreferenceCategory>
 
+    <Preference
+            android:key="custom_carrier_label"
+            android:title="@string/custom_carrier_label_title" />
+
 </PreferenceScreen>
