--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -29,4 +29,14 @@
             android:key="custom_carrier_label"
             android:title="@string/custom_carrier_label_title" />
 
+    <PreferenceCategory
+        android:key="ui"
+        android:title="@string/ui_short">
+
+      <CheckBoxPreference
+            android:key="force_dualpanel"
+            android:title="@string/multipane_ui"
+            android:summary="@string/multipane_ui_summary"
+            android:defaultValue="false" />
+
 </PreferenceScreen>
