--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -35,6 +35,11 @@
 
     </PreferenceCategory>
 
+    <PreferenceScreen
+        android:key="lockscreen_custom_text_color"
+        android:title="@string/lockscreen_text_color_title">
+     </PreferenceScreen>
+
      <PreferenceScreen
          android:key="screen_security"
          android:fragment="com.android.settings.SecuritySettings"
