--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -35,4 +35,13 @@
             android:summary="@string/multipane_ui_summary"
             android:defaultValue="false" />
 
+      <CheckBoxPreference
+            android:key="disable_bootanimation"
+            android:title="@string/disable_bootanimation_title" />
+
+      <Preference
+            android:key="custom_bootanimation"
+            android:title="@string/custom_bootanimation_title"
+            android:summary="@string/custom_bootanimation_summary" />
+
 </PreferenceScreen>
