--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -58,6 +58,11 @@
         android:defaultValue="0" />
 
      <CheckBoxPreference
+            android:key="lockscreen_all_widgets"
+            android:title="@string/lockscreen_widgets_all_title"
+            android:summary="@string/lockscreen_widgets_all_summary" />
+
+     <CheckBoxPreference
         android:key="lockscreen_maximize_widgets"
         android:persistent="false"
         android:title="@string/lockscreen_maximize_widgets_title"
