--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -54,10 +54,10 @@
         android:title="@string/power_menu_title"
         android:fragment="com.android.settings.cyanogenmod.PowerMenu" />
 
-  <!--  <PreferenceScreen
-        android:key="nav_bar"
-        android:fragment="com.android.settings.cyanogenmod.NavigationBar"
-        android:title="@string/navigation_bar_title" /> -->
+    <PreferenceScreen
+        android:key="wifi_settings"
+        android:fragment="com.android.settings.slim.WifiSettings"
+        android:title="@string/ass_wifi_settings_title" />
 
     <!-- Lock clock -->
     <PreferenceScreen
