--- a/res/xml/status_bar_battery_style.xml
+++ b/res/xml/status_bar_battery_style.xml
@@ -19,6 +19,33 @@
     android:title="@string/status_bar_battery_bar_title">
 
     <PreferenceCategory
+        android:key="circle_battery_title"
+        android:title="@string/circle_battery_title">
+
+	<net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="circle_battery_color"
+            android:title="@string/circle_battery_color"
+            android:defaultValue="#33B5E5" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="circle_battery_text_color"
+            android:title="@string/circle_battery_text_color"
+            android:defaultValue="#33B5E5" />
+
+        <ListPreference
+            android:key="circle_battery_animation_speed"
+            android:title="@string/circle_battery_animation_speed"
+            android:entries="@array/circle_battery_animation_speed_entries"
+            android:entryValues="@array/circle_battery_animation_speed_values" />
+
+        <Preference
+            android:key="circle_battery_reset"
+            android:title="@string/circle_battery_reset_title"
+            android:summary="@string/circle_battery_reset_summary" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="battery_bar_cat"
         android:title="@string/battery_bar_cat">
 
@@ -49,27 +76,6 @@
             android:title="@string/battery_bar_animate_title"
             android:summary="@string/battery_bar_animate_summary" />
 
-	<net.margaritov.preference.colorpicker.ColorPickerPreference
-            android:key="circle_battery_color"
-            android:title="@string/circle_battery_color"
-            android:defaultValue="#33B5E5" />
-
-        <net.margaritov.preference.colorpicker.ColorPickerPreference
-            android:key="circle_battery_text_color"
-            android:title="@string/circle_battery_text_color"
-            android:defaultValue="#33B5E5" />
-
-        <ListPreference
-            android:key="circle_battery_animation_speed"
-            android:title="@string/circle_battery_animation_speed"
-            android:entries="@array/circle_battery_animation_speed_entries"
-            android:entryValues="@array/circle_battery_animation_speed_values" />
-
-        <Preference
-            android:key="circle_battery_reset"
-            android:title="@string/circle_battery_reset_title"
-            android:summary="@string/circle_battery_reset_summary" />
-
-    </PreferenceCategory>
+	</PreferenceCategory>
 
 </PreferenceScreen>
