--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -56,7 +56,7 @@
 
     <PreferenceScreen
         android:key="wifi_settings"
-        android:fragment="com.android.settings.slim.WifiSettings"
+        android:fragment="com.android.settings.cyanogenmod.WifiSettings"
         android:title="@string/ass_wifi_settings_title" />
 
     <!-- Lock clock -->
