--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1210,6 +1210,26 @@
         <item>0</item>
     </string-array>
 
+    <!-- Signal -->
+    <string-array name="signal_style_entries" translatable="false">
+        <item>@string/show_signal_bars</item>
+        <item>@string/show_signal_text</item>
+        <item>@string/show_with_dbm</item>
+    </string-array>
+    <string-array name="signal_style_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+    <string-array name="wifi_signal_style_entries" translatable="false">
+        <item>@string/show_signal_bars</item>
+        <item>@string/show_signal_text</item>
+    </string-array>
+    <string-array name="wifi_signal_style_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
 <string-array name="clock_style_entries" translatable="false">
         <item>@string/right_clock</item>
         <item>@string/center_clock</item>
