--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -31,6 +31,39 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+            android:key="signal"
+            android:title="@string/status_bar_signal_header">
+
+        <ListPreference
+            android:entries="@array/signal_style_entries"
+            android:entryValues="@array/signal_style_values"
+            android:key="signal_style"
+            android:title="@string/signal_style" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="signal_color"
+            android:title="@string/signal_color_title"
+            android:defaultValue="@android:color/holo_blue_light" />
+
+        <ListPreference
+            android:entries="@array/wifi_signal_style_entries"
+            android:entryValues="@array/wifi_signal_style_values"
+            android:key="wifi_signal_style"
+            android:title="@string/wifi_signal_style" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="wifi_signal_color"
+            android:title="@string/wifi_signal_color_title"
+            android:defaultValue="@android:color/holo_blue_light" />
+
+        <CheckBoxPreference
+            android:key="hide_signal"
+            android:title="@string/hide_signal_title"
+            android:summary="@string/hide_signal_summary" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="status_bar_general"
         android:title="@string/status_bar_general_title">
 
@@ -50,12 +83,12 @@
             android:entries="@array/entries_status_bar_battery"
             android:entryValues="@array/values_status_bar_battery" />
 
-        <ListPreference
+<!--        <ListPreference
             android:key="status_bar_signal"
             android:dialogTitle="@string/status_bar_signal_text_title"
             android:title="@string/status_bar_signal_text_title"
             android:entries="@array/entries_status_bar_signal"
-            android:entryValues="@array/values_status_bar_signal" />
+            android:entryValues="@array/values_status_bar_signal" />-->
 
         <CheckBoxPreference
             android:key="status_bar_brightness_control"
