--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -57,6 +57,11 @@
             android:title="@string/lockscreen_widgets_all_title"
             android:summary="@string/lockscreen_widgets_all_summary" />
 
+	<CheckBoxPreference
+            android:key="lockscreen_minimize_challenge"
+            android:title="@string/lockscreen_minimize_challenge_title"
+            android:summary="@string/lockscreen_minimize_challenge_summary" />
+
      <CheckBoxPreference
         android:key="lockscreen_maximize_widgets"
         android:persistent="false"
