--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -51,9 +51,9 @@
         android:key="status_bar_general"
         android:title="@string/status_bar_general_title">
 
-        <com.android.settings.widget.SeekBarPreference
+        <!--<com.android.settings.widget.SeekBarPreference
             android:key="status_bar_transparency"
-            android:title="@string/status_bar_transparency_title" />
+            android:title="@string/status_bar_transparency_title" />-->
 
         <PreferenceScreen
             android:key="battery_style_pref"
