High end gfx option (thanks slim!) Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -38,6 +38,12 @@
         android:entryValues="@array/values_dual_pane_prefs" />
 
       <CheckBoxPreference
+            android:key="high_end_gfx"
+            android:title="@string/high_end_gfx_title"
+            android:summary="@string/high_end_gfx_summary"
+            android:defaultValue="true" />
+
+      <CheckBoxPreference
             android:key="disable_bootanimation"
             android:title="@string/disable_bootanimation_title" />
 
