--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -7,6 +7,11 @@
             android:title="@string/lcd_density_title"
             android:summary="@string/lcd_density_summary" />
 
+	<Preference
+            android:key="scroll_setup"
+            android:title="@string/scroll_title"
+            android:summary="@string/scroll_summary" />
+
         <CheckBoxPreference
             android:key="use_alt_resolver"
             android:title="@string/alt_resolver"
