Add back lockscreen rotation using the AOKP way.. hopefully no lag. Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -53,6 +53,11 @@
         android:defaultValue="0" />
 
      <CheckBoxPreference
+        android:key="allow_rotation"
+        android:title="@string/allow_rotate_title"
+        android:summary="@string/allow_rotate_summary" />
+
+     <CheckBoxPreference
             android:key="lockscreen_all_widgets"
             android:title="@string/lockscreen_widgets_all_title"
             android:summary="@string/lockscreen_widgets_all_summary" />
