Lockscreen text color. Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -43,6 +43,11 @@
          <extra android:name="cm_security" android:value="true" />
      </PreferenceScreen>
 
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="lockscreen_text_color"
+            android:title="@string/lockscreen_text_color_title"
+            android:defaultValue="#ffffffff" />
+
      <ListPreference
         android:key="lockscreen_battery_status"
         android:persistent="false"
