--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -60,12 +60,12 @@
             android:fragment="com.android.settings.cyanogenmod.StatusBarBatteryStyle"
             android:title="@string/status_bar_battery_bar_title" />
 
-        <ListPreference
+ <!--       <ListPreference
             android:key="status_bar_battery"
             android:dialogTitle="@string/status_bar_battery_title"
             android:title="@string/status_bar_battery_title"
             android:entries="@array/entries_status_bar_battery"
-            android:entryValues="@array/values_status_bar_battery" />
+            android:entryValues="@array/values_status_bar_battery" /> -->
 
         <CheckBoxPreference
             android:key="status_bar_brightness_control"
