--- a/res/xml/status_bar_battery_style.xml
+++ b/res/xml/status_bar_battery_style.xml
@@ -16,13 +16,20 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="@string/status_bar_battery_bar_title">
+    android:title="@string/status_bar_battery_title">
 
     <PreferenceCategory
-        android:key="circle_battery_title"
-        android:title="@string/circle_battery_title">
+        android:key="battery_cat"
+        android:title="@string/status_bar_battery_title">
 
-	<net.margaritov.preference.colorpicker.ColorPickerPreference
+        <ListPreference
+            android:key="status_bar_battery"
+            android:dialogTitle="@string/status_bar_battery_title"
+            android:title="@string/status_bar_battery_title"
+            android:entries="@array/entries_status_bar_battery"
+            android:entryValues="@array/values_status_bar_battery" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="circle_battery_color"
             android:title="@string/circle_battery_color"
             android:defaultValue="#33B5E5" />
@@ -33,7 +40,7 @@
             android:entries="@array/circle_battery_animation_speed_entries"
             android:entryValues="@array/circle_battery_animation_speed_values" />
 
-	<net.margaritov.preference.colorpicker.ColorPickerPreference
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="battery_text_color"
             android:title="@string/battery_text_color"
             android:defaultValue="#33B5E5" />
@@ -55,9 +62,10 @@
             android:entries="@array/battery_bar_entries"
             android:entryValues="@array/battery_bar_values" />
 
-        <PreferenceScreen
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="battery_bar_color"
-            android:title="@string/battery_bar_color" />
+            android:title="@string/battery_bar_color"
+            android:defaultValue="#33B5E5" />
 
         <ListPreference
             android:key="battery_bar_style"
@@ -76,6 +84,6 @@
             android:title="@string/battery_bar_animate_title"
             android:summary="@string/battery_bar_animate_summary" />
 
-	</PreferenceCategory>
+    </PreferenceCategory>
 
 </PreferenceScreen>
