--- a/res/xml/status_bar_battery_style.xml
+++ b/res/xml/status_bar_battery_style.xml
@@ -32,7 +32,8 @@
         <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="circle_battery_color"
             android:title="@string/circle_battery_color"
-            android:defaultValue="#33B5E5" />
+            android:defaultValue="#33B5E5"
+	    alphaSlider="true" />
 
         <ListPreference
             android:key="circle_battery_animation_speed"
@@ -43,7 +44,8 @@
         <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="battery_text_color"
             android:title="@string/battery_text_color"
-            android:defaultValue="#33B5E5" />
+            android:defaultValue="#33B5E5"
+	    alphaSlider="true" />
 
         <Preference
             android:key="battery_color_reset"
@@ -65,7 +67,8 @@
         <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="battery_bar_color"
             android:title="@string/battery_bar_color"
-            android:defaultValue="#33B5E5" />
+            android:defaultValue="#33B5E5"
+	    alphaSlider="true" />
 
         <ListPreference
             android:key="battery_bar_style"
