Revert "Ability to make the battery colors transparent.. alpha sliders!"
This reverts commit 670d36a2c59a3c9914390dc189cf4601b292d457.

Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

--- a/res/xml/status_bar_battery_style.xml
+++ b/res/xml/status_bar_battery_style.xml
@@ -32,8 +32,7 @@
         <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="circle_battery_color"
             android:title="@string/circle_battery_color"
-            android:defaultValue="#33B5E5"
-	    alphaSlider="true" />
+            android:defaultValue="#33B5E5" />
 
         <ListPreference
             android:key="circle_battery_animation_speed"
@@ -44,8 +43,7 @@
         <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="battery_text_color"
             android:title="@string/battery_text_color"
-            android:defaultValue="#33B5E5"
-	    alphaSlider="true" />
+            android:defaultValue="#33B5E5" />
 
         <Preference
             android:key="battery_color_reset"
@@ -67,8 +65,7 @@
         <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="battery_bar_color"
             android:title="@string/battery_bar_color"
-            android:defaultValue="#33B5E5"
-	    alphaSlider="true" />
+            android:defaultValue="#33B5E5" />
 
         <ListPreference
             android:key="battery_bar_style"
