--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -78,6 +78,12 @@
             android:title="@string/status_bar_notif_count_title"
             android:summary="@string/status_bar_notif_count_summary"
             android:defaultValue="false" />
-    </PreferenceCategory>
 
+	<CheckBoxPreference
+        android:key="status_bar_donotdisturb"
+        android:title="@string/status_bar_donotdisturb_title"
+        android:summary="@string/status_bar_donotdisturb_summary"
+        android:defaultValue="false" />
+
+    </PreferenceCategory>
 </PreferenceScreen>
