--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1956,6 +1956,7 @@
         <item>@string/home</item>
         <item>@string/back</item>
         <item>@string/recents</item>
+        <item>@string/lastapp</item>
         <item>@string/search</item>
         <item>@string/screenshot</item>
         <item>@string/menu</item>
@@ -1971,6 +1972,7 @@
         <item>**home**</item>
         <item>**back**</item>
         <item>**recents**</item>
+        <item>**lastapp**</item>
         <item>**search**</item>
         <item>**screenshot**</item>
         <item>**menu**</item>
@@ -1990,6 +1992,7 @@
         <item>@string/ring_silent</item>
         <item>@string/ring_vib_silent</item>
         <item>@string/kill_app</item>
+        <item>@string/lastapp</item>
         <item>@string/screen_off</item>
         <item>@string/google_now</item>
         <item>@string/select_application</item>
@@ -2003,6 +2006,7 @@
         <item>**ring_silent**</item>
         <item>**ring_vib_silent**</item>
         <item>**kill**</item>
+        <item>**lastapp**</item>
         <item>**power**</item>
         <item>**assist**</item>
         <item>**app**</item>
