--- a/res/xml/quick_settings_panel_settings.xml
+++ b/res/xml/quick_settings_panel_settings.xml
@@ -34,6 +34,11 @@
             android:title="@string/title_collapse_panel"
             android:summary="@string/summary_collapse_panel" />
 
+	<CheckBoxPreference
+            android:key="no_notifications_pulldown"
+            android:title="@string/title_no_notifications_pulldown"
+            android:summary="@string/summary_no_notifications_pulldown" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
