--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -30,18 +30,20 @@
         android:defaultValue="false" />
 
     <CheckBoxPreference
+        android:key="power_menu_airplane"
+        android:title="@string/power_menu_airplane_title"
+        android:defaultValue="true" />
+
+    <ListPreference
         android:key="power_menu_expanded_desktop"
         android:title="@string/power_menu_expanded_desktop"
-        android:defaultValue="false" />
+        android:entries="@array/expanded_desktop_entries"
+        android:entryValues="@array/expanded_desktop_values"
+        android:persistent="false" />
 
     <CheckBoxPreference
         android:key="power_menu_profiles"
         android:title="@string/power_menu_profiles_title"
-        android:defaultValue="true" />
-
-    <CheckBoxPreference
-        android:key="power_menu_airplane"
-        android:title="@string/power_menu_airplane_title"
         android:defaultValue="true" />
 
     <CheckBoxPreference
