--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2079,4 +2079,17 @@
         <item>3</item>
     </string-array>
 
+    <!-- Tiles per row -->
+    <string-array name="tiles_per_row_entries" translatable="false">
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+
+    <string-array name="tiles_per_row_values" translatable="false">
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+    </string-array>
+
 </resources>
