lock screen shortcuts (PA style)
Change-Id: I0a5197b09287606563ef2a0555624f1c68c69420
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	res/values/arrays.xml
	res/values/strings.xml
	res/xml/prefs_lockscreen.xml

--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -83,11 +83,22 @@
             android:title="@string/lockscreen_use_widget_container_carousel_title"
             android:summary="@string/lockscreen_use_widget_container_carousel_summary" />
 
+     <PreferenceCategory
+        android:key="lockscreen"
+        android:title="LockScreen Custom Apps">
+
      <Preference
         android:fragment="com.android.settings.cyanogenmod.LockscreenTargets"
         android:key="lockscreen_targets"
         android:summary="@string/lockscreen_target_summary"
         android:title="@string/lockscreen_target_title" />
+
+     <PreferenceScreen
+        android:key="lock_screen_shortcuts"
+        android:fragment="com.android.settings.shortcuts.Shortcuts"
+        android:title="@string/lock_screen_shortcuts_title" 
+        android:summary="@string/lock_screen_shortcuts_summary" />
+     </PreferenceCategory>
 
      <PreferenceScreen
         android:fragment="com.android.settings.cyanogenmod.LockscreenButtons"
