--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -122,6 +122,13 @@
             android:entries="@array/emergency_tone_entries"
             android:entryValues="@array/emergency_tone_values" />
 
+    <ListPreference
+        android:key="less_notification_sounds"
+        android:title="@string/less_notification_sounds_title"
+        android:summary="@string/less_notification_sounds_summary"
+        android:entries="@array/less_notification_sounds_entries"
+        android:entryValues="@array/less_notification_sounds_values" />
+
     <CheckBoxPreference
             android:key="notification_convert_sound_to_vibration"
             android:title="@string/notification_convert_sound_to_vibration_title"
