--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -30,6 +30,12 @@
         android:title="@string/status_bar_title" />
 
     <PreferenceScreen
+        android:key="pie_control"
+        android:fragment="com.android.settings.cyanogenmod.Pie"
+        android:title="@string/pie_controls_title"
+        android:summary="@string/pie_controls_summary" />
+
+    <PreferenceScreen
         android:key="navbar_settings"
         android:fragment="com.android.settings.cyanogenmod.NavbarSettings"
         android:title="@string/navigation_bar" />
