--- a/res/xml/power_widget_settings.xml
+++ b/res/xml/power_widget_settings.xml
@@ -42,6 +42,12 @@
             android:fragment="com.android.settings.cyanogenmod.PowerWidget$PowerWidgetOrder">
         </PreferenceScreen>
 
+        <ListPreference
+            android:key="notifications_behaviour"
+            android:title="@string/notification_behaviour_title"
+            android:entries="@array/notifs_beh_entries"
+            android:entryValues="@array/notifs_beh_values" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
