Revert "Fix the navbar layout."
This reverts commit 657d285e8d2df8eeac50ae5fda38e187c8cd9c23.

--- a/res/xml/navbar_style_dimen_settings.xml
+++ b/res/xml/navbar_style_dimen_settings.xml
@@ -22,6 +22,8 @@
 
             <net.margaritov.preference.colorpicker.ColorPickerPreference
                     android:key="nav_bar_color"
+		    android:layout="?android:attr/preferenceLayoutChild"
+	            android:persistent="true"
                     android:title="@string/navigation_bar_tint_title"
                     android:defaultValue="#000000"
 		    alphaSlider="true" />
