--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1570,6 +1570,19 @@
         <item>1</item>
     </string-array>
 
+    <!-- Expanded desktop -->
+    <string-array name="expanded_desktop_entries" translatable="false">
+        <item>@string/expanded_desktop_disabled</item>
+        <item>@string/expanded_desktop_status_bar</item>
+        <item>@string/expanded_desktop_no_status_bar</item>
+    </string-array>
+
+    <string-array name="expanded_desktop_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
     <!-- Quick pulldown -->
     <string-array name="quick_pulldown_entries" translatable="false">
         <item>@string/quick_pulldown_off</item>
@@ -1912,21 +1925,6 @@
     </string-array>
 
     <string-array name="values_ram_bar_mode" translatable="false">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-    </string-array>
-
-    <!-- Expanded desktop -->
-    <string-array name="expanded_desktop_entries">
-        <item>@string/expanded_desktop_disabled</item>
-        <item>@string/expanded_desktop_only_nav_bar</item>
-        <item>@string/expanded_desktop_only_status_bar</item>
-        <item>@string/expanded_desktop_both_hidden</item>
-    </string-array>
-
-    <string-array name="expanded_desktop_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
