--- a/res/xml/lockscreen_interface_settings.xml
+++ b/res/xml/lockscreen_interface_settings.xml
@@ -46,7 +46,7 @@
     <net.margaritov.preference.colorpicker.ColorPickerPreference
             android:key="lockscreen_text_color"
             android:title="@string/lockscreen_text_color_title"
-            android:defaultValue="#ffffffff" />
+            android:defaultValue="0xffffffff" />
 
      <ListPreference
         android:key="lockscreen_battery_status"
