--- a/res/xml/status_bar_signal_settings.xml
+++ b/res/xml/status_bar_signal_settings.xml
@@ -11,7 +11,7 @@
         android:key="signal_color"
         android:title="@string/signal_color_title"
         android:summary="@string/signal_color_summary"
-        android:defaultValue="@android:color/holo_blue_light" />
+        android:defaultValue="0xff33b5e5" />
 
     <ListPreference
         android:entries="@array/wifi_signal_style_entries"
@@ -23,7 +23,7 @@
         android:key="wifi_signal_color"
         android:title="@string/wifi_signal_color_title"
         android:summary="@string/signal_color_summary"
-        android:defaultValue="@android:color/holo_blue_light" />
+        android:defaultValue="0xff33b5e5" />
 
     <CheckBoxPreference
         android:key="alt_signal"
