--- a/res/xml/quick_settings_panel_settings.xml
+++ b/res/xml/quick_settings_panel_settings.xml
@@ -39,6 +39,12 @@
             android:title="@string/title_no_notifications_pulldown"
             android:summary="@string/summary_no_notifications_pulldown" />
 
+        <PreferenceScreen
+            android:key="quicksettings_tiles_style"
+            android:fragment="com.android.settings.cyanogenmod.quicksettings.QuickSettingsTilesStyle"
+            android:title="@string/quicksettings_tiles_style"
+            android:summary="@string/summary_quicksettings_tiles_style" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
