QuickSettings flip button longpress PowerWidget toggle Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I2737db94b314fd3d8ffb357adc13d3bcdfc3757b

--- a/res/xml/power_widget_settings.xml
+++ b/res/xml/power_widget_settings.xml
@@ -119,6 +119,12 @@
             android:entryValues="@array/haptic_feedback_values"
             android:dependency="expanded_widget" />
 
+	<CheckBoxPreference
+            android:key="longpress_qs_toggle"
+            android:title="@string/power_widget_longpress_qs_title"
+            android:summary="@string/power_widget_longpress_qs_summary"
+            android:dependency="expanded_widget" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
