Add notification opacity options and phone breathe options.  Booya! Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: Iaacb194a8c17b3ee1a410a00ca3deaeaf9a670ca

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2464,4 +2464,32 @@
         <item>2</item>
         <item>0</item>
     </string-array>
+
+    <string-array name="status_bar_icon_opacity_entries">
+        <item>5%</item>
+        <item>15%</item>
+        <item>25%</item>
+        <item>35%</item>
+        <item>45%</item>
+        <item>55% (default)</item>
+        <item>65%</item>
+        <item>75%</item>
+        <item>85%</item>
+        <item>95%</item>
+        <item>100%</item>
+    </string-array>
+
+    <string-array name="status_bar_icon_opacity_values">
+        <item>15</item>
+        <item>40</item>
+        <item>65</item>
+        <item>89</item>
+        <item>115</item>
+        <item>140</item>
+        <item>166</item>
+        <item>191</item>
+        <item>217</item>
+        <item>242</item>
+        <item>255</item>
+    </string-array> 
 </resources>
