--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -28,6 +28,15 @@
             android:key="status_bar_background_style"
             android:title="@string/status_bar_background_style" />
 
+	<ListPreference
+           android:key="status_bar_icon_opacity"
+           android:dialogTitle="@string/status_bar_icon_opacity"
+           android:title="@string/status_bar_icon_opacity"
+           android:summary="@string/status_bar_icon_opacity_summary"
+           android:entries="@array/status_bar_icon_opacity_entries"
+           android:entryValues="@array/status_bar_icon_opacity_values"
+           android:defaultValue="140" /> 
+
        <PreferenceScreen
             android:fragment="com.android.settings.cyanogenmod.StatusBarClockStyle"
             android:key="clock_style_pref"
@@ -37,6 +46,12 @@
             android:key="status_bar_signal"
             android:fragment="com.android.settings.cyanogenmod.StatusBarSignal"
 	    android:title="@string/status_bar_signal_header" />
+
+	<CheckBoxPreference
+            android:key="missed_call_breath"
+            android:title="@string/missed_call_breath"
+            android:summary="@string/missed_call_breath_summary"
+            android:defaultValue="false" /> 
 
 	<CheckBoxPreference
             android:key="mms_breath"
