Add square battery style options 2/2 Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I2b1e46b66e5f7937071774f29e083db1575399d2

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1598,7 +1598,8 @@
         <item>@string/status_bar_battery_status_dotted_circle</item>
 	<item>@string/status_bar_battery_status_dotted_circle_percentage</item>
         <item>@string/status_bar_style_hidden</item>
-	<item>@string/status_bar_battery_status_gear</item> 
+	<item>@string/status_bar_battery_status_gear</item>
+	<item>@string/status_bar_battery_status_square</item>
     </string-array>
 
     <string-array name="values_status_bar_battery" translatable="false">
@@ -1611,6 +1612,7 @@
 	<item>6</item>
         <item>7</item>
         <item>8</item>
+        <item>9</item>
     </string-array>
 
     <string-array name="circle_battery_animation_speed_entries" >
