Alt circle battery style 2 of 2.
Think were good with battery styles now.  :)
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Change-Id: I2a054d93acb7f7395e65283f371463473e7e146c

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1599,6 +1599,7 @@
 	<item>@string/status_bar_battery_status_dotted_circle_percentage</item>
 	<item>@string/status_bar_battery_status_gear</item>
 	<item>@string/status_bar_battery_status_square</item>
+	<item>@string/status_bar_battery_status_alt_circle</item>
         <item>@string/status_bar_style_hidden</item>
     </string-array>
 
@@ -1613,6 +1614,7 @@
         <item>7</item>
         <item>8</item>
         <item>9</item>
+        <item>10</item>
     </string-array>
 
     <string-array name="circle_battery_animation_speed_entries" >
