--- a/res/xml/user_interface_settings.xml
+++ b/res/xml/user_interface_settings.xml
@@ -2,6 +2,11 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+	<PreferenceScreen
+        android:key="status_bar"
+        android:fragment="com.android.settings.cyanogenmod.WidgetsSettings"
+        android:title="@string/navbar_widgets_title" /> 
+
         <Preference
             android:key="lcd_density_setup"
             android:title="@string/lcd_density_title"
