--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2400,6 +2400,16 @@
         <item>@*android:drawable/ic_lockscreen_twitter</item>
     </string-array>
 
+    <string-array name="expanded_desktop_entries_no_navbar">
+        <item>@string/expanded_desktop_disabled</item>
+        <item>@string/expanded_desktop_only_status_bar</item>
+    </string-array>
+
+    <string-array name="expanded_desktop_values_no_navbar" translatable="false">
+        <item>0</item>
+        <item>2</item>
+    </string-array> 
+
     <string-array name="less_notification_sounds_entries">
         <item>Default Behaviour</item>
         <item>3s</item>
