--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -122,6 +122,12 @@
             android:entries="@array/emergency_tone_entries"
             android:entryValues="@array/emergency_tone_values" />
 
+    <CheckBoxPreference
+        android:key="camera_sounds"
+        android:title="@string/camera_sounds_title"
+        android:summary="@string/camera_sounds_summary"
+        android:defaultValue="true" /> 
+
     <ListPreference
         android:key="less_notification_sounds"
         android:title="@string/less_notification_sounds_title"
