--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -30,6 +30,11 @@
         android:title="@string/status_bar_title" />
 
     <PreferenceScreen
+        android:key="pie_settings"
+        android:fragment="com.android.settings.beanstalk.PieControl"
+        android:title="@string/pie_control_title" /> 
+
+    <PreferenceScreen
         android:key="navbar_settings"
         android:fragment="com.android.settings.cyanogenmod.NavbarSettings"
         android:title="@string/navigation_bar" />
