--- a/res/xml/status_bar.xml
+++ b/res/xml/status_bar.xml
@@ -70,6 +70,12 @@
             android:summary="@string/mms_breath_summary"
             android:defaultValue="false" />
 
+	<CheckBoxPreference
+            android:key="status_bar_auto_hide"
+            android:title="@string/auto_hide_statusbar"
+            android:summary="@string/auto_hide_statusbar_summary"
+            android:defaultValue="false" /> 
+
         <CheckBoxPreference
             android:key="status_bar_brightness_control"
             android:title="@string/status_bar_toggle_brightness"
