Classic Recents 2/2 Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I1c8a13380fd80ead50dfe3135b04966320bda767

--- a/res/xml/misc_settings.xml
+++ b/res/xml/misc_settings.xml
@@ -46,4 +46,10 @@ limitations under the License.
             android:fragment="com.android.settings.cyanogenmod.RamBar"
             android:title="@string/ram_bar" />
 
+     <CheckBoxPreference
+            android:key="classic_recents"
+            android:title="@string/show_classic_recents"
+            android:summary="@string/show_classic_recents_summary"
+            android:defaultValue="false" /> 
+
 </PreferenceScreen>
