Add BeanStalk logo to device info settings - Thanks rootbox devs Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I3a836802b45235544961f39c996c755437d3cd54

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -31,6 +31,9 @@
                     android:targetClass="@string/additional_system_update_menu" />
         </PreferenceScreen>
 
+	<PreferenceScreen android:key="bs_logo"
+                          android:layout="@layout/logo_row" />
+
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
                 android:title="@string/device_status" 
