--- a/res/layout/logo_row.xml
+++ b/res/layout/logo_row.xml
@@ -21,6 +21,6 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/Beanstalk"
+            android:src="@drawable/beanstalk"
          />
 </LinearLayout> 
