Settings: add back 0dp navbar values
for width, height, and lanscape height due
much user requests

cheers

Change-Id: Ie1a8b4d3deb1cbc1b7eafab94afd2cf1b9625e2b

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2134,6 +2134,7 @@
         <item>@string/size_32_dp</item>
         <item>@string/size_30_dp</item>
         <item>@string/size_24_dp</item>
+        <item>@string/size_0_dp</item>
     </string-array>
 
     <string-array name="navigation_bar_width" translatable="false">
@@ -2143,6 +2144,7 @@
         <item>32</item>
         <item>30</item>
         <item>24</item>
+        <item>0</item>
     </string-array>
 
     <string-array name="navigation_bar_height_entries" translatable="false">
@@ -2154,6 +2156,7 @@
         <item>@string/size_32_dp</item>
         <item>@string/size_30_dp</item>
         <item>@string/size_24_dp</item>
+        <item>@string/size_0_dp</item>
     </string-array>
 
     <string-array name="navigation_bar_height" translatable="false">
@@ -2165,6 +2168,7 @@
         <item>32</item>
         <item>30</item>
         <item>24</item>
+        <item>0</item>
     </string-array>
 
     <string-array name="navigation_bar_height_landscape_entries" translatable="false">
@@ -2176,6 +2180,7 @@
         <item>@string/size_32_dp</item>
         <item>@string/size_30_dp</item>
         <item>@string/size_24_dp</item>
+        <item>@string/size_0_dp</item>
     </string-array>
 
     <string-array name="navigation_bar_height_landscape" translatable="false">
@@ -2187,6 +2192,7 @@
         <item>32</item>
         <item>30</item>
         <item>24</item>
+        <item>0</item>
     </string-array>
 
     <string-array name="nav_button_color_mode_entries">
