add beanstalk banner to about beanstalk Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I7287535abef3653b7ab7197bb9c76193974f9634

--- a/res/xml/about_rom.xml
+++ b/res/xml/about_rom.xml
@@ -4,6 +4,9 @@ xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/about_beanstalk_settings_title"
 xmlns:rb="http://schemas.android.com/apk/res/com.android.settings">
 
+<PreferenceScreen android:key="bs_logo"
+                 android:layout="@layout/logo_row" />
+
 <PreferenceCategory
 android:key="links"
 android:title="@string/beanstalk">
