--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1658,6 +1658,29 @@
         <item>1</item>
     </string-array>
 
+   <!-- App sidebar -->
+    <string-array name="app_sidebar_sort_type_entries">
+        <item>Sort A->Z</item>
+        <item>Sort Z->A</item>
+    </string-array>
+
+    <string-array name="app_sidebar_sort_type_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
+
+    <string-array name="app_sidebar_size_entries">
+        <item>Small</item>
+        <item>Normal</item>
+        <item>Large</item>
+    </string-array>
+
+    <string-array name="app_sidebar_size_values">
+        <item>67</item>
+        <item>100</item>
+        <item>133</item>
+    </string-array>
+
     <!-- Quick pulldown -->
     <string-array name="quick_pulldown_entries" translatable="false">
         <item>@string/quick_pulldown_off</item>
