--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -108,4 +108,11 @@
         <attr name="markerSize" format="dimension" />
         <attr name="margin" format="dimension" />
     </declare-styleable>
+
+    <declare-styleable name="SeekBarDialogPreference">
+        <attr name="max" format="integer" />
+        <attr name="min" format="integer" />
+        <attr name="prefix" format="string" />
+        <attr name="suffix" format="string" />
+    </declare-styleable>
 </resources>
