Add donate preference in device settings Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>
Change-Id: I65948c6c60b011133e68f4e29f4eebf3a0c38319

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -43,6 +43,11 @@
                     android:targetClass="com.android.settings.deviceinfo.Status" />
         </PreferenceScreen>
 
+	<Preference
+            android:key="donate"
+            android:title="@string/donate_beanstalk_title"
+            android:summary="@string/donate_beanstalk_summary" />
+
         <!-- Legal Information -->
         <PreferenceScreen
                 android:key="container"
