--- a/res/xml/keyboard_input_settings.xml
+++ b/res/xml/keyboard_input_settings.xml
@@ -38,4 +38,10 @@ limitations under the License.
         android:summary="@string/disable_fullscreen_keyboard_summary"
         android:defaultValue="false" />
 
+    <CheckBoxPreference
+        android:key="show_enter_key"
+        android:title="@string/show_enter_key_title"
+        android:summary="@string/show_enter_key_summary"
+        android:persistent="false" />
+
 </PreferenceScreen>
