--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -135,4 +135,11 @@
         <attr name="pickerTitle3" format="string" />
         <attr name="pickerTitle4" format="string" />
     </declare-styleable>
+
+    <declare-styleable name="SeekBarDialogPreference">
+        <attr name="max" format="integer" />
+        <attr name="min" format="integer" />
+        <attr name="unitsLeft" format="string" />
+        <attr name="unitsRight" format="string" />
+    </declare-styleable>
 </resources>
