--- a/res/xml/system_settings.xml
+++ b/res/xml/system_settings.xml
@@ -40,6 +40,11 @@
         android:title="@string/halo_options_title" />
 
     <PreferenceScreen
+        android:key="app_sidebar"
+        android:fragment="com.android.settings.beanstalk.AppSidebar"
+        android:title="@string/app_sidebar_title" />
+
+    <PreferenceScreen
         android:key="navbar_settings"
         android:fragment="com.android.settings.cyanogenmod.NavbarSettings"
         android:title="@string/navigation_bar" />
