Settings: Camera button rebinding and lockscreen action additions (2/2)
Adds new config_deviceHardwareKeys bitmask for camera button.
Lets you rebind the camera press/longpress and adds a new KEYCODE_CAMERA handler to inject a longpress KeyEvent
in order to let you bind keys to actually trigger the shutter, in addition to launching the app itself.

This also adds KEYCODE_ASSIST and KEYCODE_APP_SWITCH to the available keys to assign longpress lockscreen actions to.

Change-Id: Iad1c850e07974ef45313b32c9427b9e0d31dedd7
Signed-off-by: scotthartbti <scott.hart.bti@gmail.com>

Conflicts:
	res/values/arrays.xml
	res/values/strings.xml

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1568,6 +1568,7 @@
         <item>@string/hardware_keys_action_nothing</item>
         <item>@string/hardware_keys_action_home</item>
         <item>@string/hardware_keys_action_back</item>
+	<item>@string/hardware_keys_action_camera</item>
         <item>@string/hardware_keys_action_menu</item>
         <item>@string/hardware_keys_action_app_switch</item>
         <item>@string/hardware_keys_action_search</item>
@@ -1587,6 +1588,7 @@
         <item>0</item>
         <item>1</item>
         <item>2</item>
+	<item>16</item>
         <item>3</item>
         <item>4</item>
         <item>5</item>
