--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -2704,4 +2704,11 @@
         <item>1</item>
         <item>0</item>
     </string-array>
+    <!--  Values for profile Wi-Fi triggers -->
+    <string-array name="profile_trigger_wifi_options" translatable="false">
+        <item>@string/profile_trigger_connect</item>
+        <item>@string/profile_trigger_disconnect</item>
+        <item>@string/profile_trigger_notrigger</item>
+    </string-array>
+
 </resources>
